fix profile featured alignment when no social links present

--- a/wp-content/themes/wp-theme/assets/sass/app/_profile.sass
+++ b/wp-content/themes/wp-theme/assets/sass/app/_profile.sass
@@ -11,6 +11,13 @@
 		+mobile
 			padding: 0 20px
 
+	&.social-links-empty
+		.featured
+			top: 0
+
+		.links
+			display: none
+
 	.intro
 		display: block
 
